--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Candye Supplier OOS Cleaner — Reference-First Flow (robust XLSX/CSV)</title>
+  <title>Supplier OOS Cleaner — Reference-First Flow (robust XLSX/CSV)</title>
   <style>
     :root{ --bg:#0f172a; --card:#111827; --muted:#94a3b8; --fg:#e5e7eb; --accent:#22d3ee; --ok:#34d399; --warn:#f59e0b; --err:#ef4444; --radius:14px }
     *{box-sizing:border-box}
@@ -396,3 +396,5 @@ function wireDrop(el, onFile){ el.addEventListener('dragover', e=>{e.preventDefa
 </script>
 </body>
 </html>
+
+        
